fixed the alignment

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -28,7 +28,7 @@ body {
 .items_list {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   text-decoration: none;
   padding: 0;
   margin: 0;
